<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">We Found It</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open Menu</string>
    <string name="drawer_close">Close Menu</string>

    <string-array name="menu_names">
        <item>Front Page</item>
        <item>Profile</item>
        <item>My Lost Things</item>
        <item>My Found Things</item>
        <item>Report Found</item>
        <item>Report Lost</item>
        <item >Logout</item>
    </string-array>

    <string name="title_fragment_profile">Profile</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_fragment_front_page">Found News</string>
    <string name="title_fragment_lost_thing">My Lost Thing</string>
    <string name="title_fragment_found_thing">My Found Things</string>
    <string name="title_activity_report_found">Report Found</string>
    <string name="title_activity_report_lost">Report Lost</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search Lost/Found</string>
    <string name="title_activity_search_result">Search Result</string>
    <string name="action_refresh">Refresh</string>

    <string-array name="spinner_names">
        <item>Found</item>
        <item>Lost</item>
    </string-array>

    <string name="title_activity_fplost_fragment">Lost News</string>
    <string name="foundname_hint">Name</string>
    <string name="foundloc_hint">Location GPS</string>
    <string name="foundgps_desc">Get GPS Location</string>
    <string name="foundemail_hint">E-mail</string>
    <string name="founddesc_hint">Description</string>
    <string name="founddate_label">Found Date</string>

    <string-array name="foundcat_strings">
        <item>&lt;Category&gt;</item>
        <item>Smartphone</item>
        <item>Wallet</item>
    </string-array>

    <string name="foundphone_hint">Phone Number to Contact</string>
    <string name="foundsubmit_button">Submit</string>
    <string name="discard_label">Cancel</string>
    <string name="save_label">Done</string>
    <string name="foundaccgal_desc">Access Media Gallery</string>
    <string name="foundcamera_desc">Take Picture</string>
    <string name="title_activity_test">Test</string>
    <string name="lostdate_label">Lost Date</string>
    <string name="lostloc_hint">Lost Location</string>
    <string name="title_activity_thing">ThingActivity</string>
    <string name="title_activity_image_detail">ImageDetailActivity</string>
    <string-array name="menu_names_no">
        <item >Front Page</item>
        <item>Login</item><item >Register</item>
        <item >Report Found</item>
        
    </string-array>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_login">Login</string>

</resources>